--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "full stack React app",
   "main": "index.js",
   "scripts": {
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "npm start --prefix client",
     "server": "nodemon server"
   },
   "repository": {
